GiftPool Bot: Fully automated group gift assistant

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
     </div>
 
     <div class="mb-4">
-      <label class="form-label text-dark">Budget per Person (USD):</label>
+      <label class="form-label text-dark">Budget per Person (EUR€):</label>
       <input type="number" name="budget" value="30" class="form-control form-control-lg" min="5" max="500">
     </div>
 
