GiftPool Bot: Fully automated group gift assistant

--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
   </form>
 
   <div class="text-center mt-5">
-    <small class="text-muted">Powered by Flask • Stripe • Render</small>
+    <small class="text-muted"> Created by Javier</small>
   </div>
 </div>
 
